=== Version 0.4.4
* Enhancements
  * Can now find Radio buttons by value
  * Updated to use selenium-webdriver 2.9.0

=== Version 0.4.3 / 2011-10-07
* Enhancements
  * The new watir and selenium fix a fairly serious problem when working with modals and attaching to windows
  * Updated to use selenium-webdriver 2.8.0
  * Updated to use watir-webdriver 0.3.5

=== Version 0.4.2 / 2011-10-01
* Enhancements
  * Proper handling of <button> elements
  * Changed PageFactory so it also sets and instance variable @current_page to the newly created page

=== Version 0.4.1 / 2011-09-30
* Fixes
  * Fixed error when loading plugins using Selenium

=== Version 0.4 / 2011-09-24
* Enhancements
  * Added all of the h4 locators
  * Added all of the h5 locators
  * Added all of the h6 locators
  * Added all of the paragraph locators
  * Added the Paragraph class
  * Added #click to Element
  * Added #style to Element
  * Added #inspect to Element
  * Added #current_url to PageObject
  * Added #clear_cookies to PageObject
  * Added #save_screenshot to PageObject
  * Updated to use selenium-webdriver 2.7.0
  * Updated to use watir-webdriver 0.3.4

=== Version 0.3.2 / 2011-09-22
* Enhancements
  * Element#when_present now returns the element object
  * Element#when_visible now returns the element object
  * Element#when_not_visible now returns the element object
  * Added #clear method for TextArea
  * Added support for Heading element
  * Added all of the h1 locators
  * Added all of the h2 locators
  * Added all of the h3 locators
  * Updated to use selenium-webdriver 2.6.0

=== Version 0.3.1 / 2011-09-08
* Enhancements
  * Updated to use watir-webdriver 0.3.3

=== Version 0.3.0 / 2011-09-04
* Enhancements
  * Changed namespace for selenium and watir to include webdriver
  * Support for locating the following elements when nested
    * Link
    * Button
    * TextField
    * HiddenField
    * TextArea
    * SelectList
    * Checkbox
    * RadioButton
    * Div
    * Span
    * Table